update basic info

--- a/slide/main.tex
+++ b/slide/main.tex
@@ -43,9 +43,9 @@
 \usepackage{hyperref}
 
 % Title page information
-\title{Presentation Title}
-\subtitle{Subtitle}
-\author{Your Name}
+\title{Two-sided Markets, Pricing, and Network Effects}
+\subtitle{Theory and Empirical Study}
+\author{Dan (Daisy) Song \quad Jing You}
 \institute{Hong Kong University of Science and Technology}
 \date{\today}
 
