update general framework

--- a/slide/main.tex
+++ b/slide/main.tex
@@ -44,7 +44,7 @@
 
 % Title page information
 \title{Two-sided Markets, Pricing, and Network Effects}
-\subtitle{Theory and Empirical Study}
+\subtitle{Theoretical and Empirical Study}
 \author{Dan (Daisy) Song \quad Jing You}
 \institute{Hong Kong University of Science and Technology}
 \date{\today}
@@ -72,8 +72,30 @@
 \end{frame}
 
 % Section 2
-\section{Methods}
-\begin{frame}{Methods}
+\section{Benchmark Model}
+\begin{frame}{Armstrong(2006): Monopoly Pricing}
+    \begin{block}{Important Block}
+        Key information goes here
+    \end{block}
+    
+    \begin{itemize}
+        \item Method 1
+        \item Method 2
+    \end{itemize}
+\end{frame}
+
+\begin{frame}{Armstrong(2006): Competition for the Market}
+    \begin{block}{Important Block}
+        Key information goes here
+    \end{block}
+    
+    \begin{itemize}
+        \item Method 1
+        \item Method 2
+    \end{itemize}
+\end{frame}
+
+\begin{frame}{Armstrong(2006): Competition on the Market}
     \begin{block}{Important Block}
         Key information goes here
     \end{block}
@@ -85,7 +107,7 @@
 \end{frame}
 
 % Section 3
-\section{Results}
+\section{Comments and Insights}
 \begin{frame}{Results}
     \begin{columns}
         \column{0.5\textwidth}
@@ -102,7 +124,7 @@
 \end{frame}
 
 % Section 4
-\section{Conclusion}
+\section{Summary}
 \begin{frame}{Conclusion}
     \begin{itemize}
         \item Main finding 1
