--- a/slide/main.tex
+++ b/slide/main.tex
@@ -106,16 +106,175 @@
 
 \section{Benchmark Model}
 \begin{frame}{Armstrong(2006): Monopoly Pricing}
-    \begin{block}{Important Block}
-        Key information goes here
+    \begin{equation*}
+        \Large
+        u_{j}^{i} = \alpha_{j}^{i} n^{i} + \xi_{j}^{i}
+    \end{equation*}
+    \begin{block}{Basic Setting}
+        \begin{enumerate}
+            \item Two groups of agents: j = 1, 2
+            \item Only one platform in the market: i = 1
+            \item No fixed benefits from using the platform: $\xi_{j}^{i} = 0$
+            \item One group cares about the number of agents in the other group but not itself
+            \item Interaction benefits are different across groups: $\alpha_{j}^{i} \neq \alpha_{k}^{i}$
+            \item The platform can charge a per-agent fee to each group of agents
+        \end{enumerate}
     \end{block}
-    
+
+\end{frame}
+
+\begin{frame}{Armstrong(2006): Monopoly Pricing}
+    \textbf{Utility of agents}
+    \vspace{1em}
+    \begin{equation}
+        \large
+        u_{1} = \alpha_{1} n_{2} - p_{1}
+            \qquad
+        u_{2} = \alpha_{2} n_{1} - p_{2}
+    \end{equation}
     \begin{itemize}
-        \item Method 1
-        \item Method 2
+      \item $\alpha_{1}$: Interaction benefit a group-1 agent gets from each group-2 agent
+      \item $\alpha_{2}$: Interaction benefit a group-2 agent gets from each group-1 agent
+      \item $n_{1}$: number of group-1 agents on the platform
+      \item $n_{2}$: number of group-2 agents on the platform
+      \item $p_{1}, p_{2}$: prices charged by the platform to groups 1 and 2
     \end{itemize}
 \end{frame}
 
+\begin{frame}{Armstrong (2006): Monopoly Pricing}
+    \textbf{Demand Functions}
+    \vspace{1em}
+    
+    \begin{equation}
+        \large
+        n_{1} = \phi_{1}(u_{1})
+        \qquad
+        n_{2} = \phi_{2}(u_{2})
+    \end{equation}
+    
+    \begin{itemize}
+      \item $n_{1}, n_{2}$: numbers of agents from groups 1 and 2 
+                            who join the platform
+      \item $\phi_{1}, \phi_{2}$: increasing demand functions mapping 
+                                  $u_{1}, u_{2}$ (utilities) to participation
+      \item $u_{1}, u_{2}$: utilities offered to agents in groups 1 and 2
+    \end{itemize}
+\end{frame}
+
+\begin{frame}{Armstrong (2006): Monopoly Pricing}
+    \textbf{Profit Function}
+    \vspace{1em}
+
+    \begin{equation}
+        \large
+        \pi(u_{1}, u_{2}) \;=\; 
+            \phi_{1}(u_{1})\Bigl[\alpha_{1}\,\phi_{2}(u_{2}) - u_{1} - f_{1}\Bigr]
+            \;+\;
+            \phi_{2}(u_{2})\Bigl[\alpha_{2}\,\phi_{1}(u_{1}) - u_{2} - f_{2}\Bigr]
+    \end{equation}
+    
+    \begin{itemize}
+      \item $\pi(u_{1},u_{2})$: platform’s profit in terms of utilities
+      \item $f_{1},f_{2}$: per‐agent costs for groups 1 and 2
+      \item $\alpha_{1}, \alpha_{2}$: cross‐group interaction benefits
+      \item $\phi_{1}, \phi_{2}$: same demand functions as in the previous slide
+    \end{itemize}
+\end{frame}
+
+\begin{frame}{Armstrong (2006): Monopoly Pricing}
+    \justifying
+
+    Let the aggregate consumer surplus of group \(i = 1, 2\) be \(v_i(u_i)\), 
+    where \(v_i(\cdot)\) satisfies the envelope condition 
+    \( v_i'(u_i) \equiv \phi_i(u_i) \). Then welfare, as measured by the unweighted 
+    sum of profit and consumer surplus, is
+    \[
+       w = \pi(u_1, u_2) \;+\; v_1(u_1) \;+\; v_2(u_2).
+    \]
+    
+    It is easily verified that the welfare‐maximizing outcome has the utilities
+    \[
+       u_1 = (\alpha_1 + \alpha_2)\,n_2 \;-\; f_1,
+       \qquad
+       u_2 = (\alpha_1 + \alpha_2)\,n_1 \;-\; f_2.
+    \]
+    
+    From expression (1), the socially optimal prices satisfy
+    \[
+       p_1 = f_1 \;-\; \alpha_2\,n_2,
+       \qquad
+       p_2 = f_2 \;-\; \alpha_1\,n_1.
+    \]
+\end{frame}
+
+\begin{frame}{Armstrong (2006): Monopoly Pricing}
+    \justifying
+
+    From expression~(2), the profit‐maximizing prices satisfy:
+    \[
+      p_{1} 
+      \;=\; f_{1} \;-\; \alpha_{2}\,n_{2}
+              \;+\; \frac{\phi_{1}(u_{1})}{\phi_{1}'(u_{1})},
+      \quad
+      p_{2} 
+      \;=\; f_{2} \;-\; \alpha_{1}\,n_{1}
+              \;+\; \frac{\phi_{2}(u_{2})}{\phi_{2}'(u_{2})}.
+    \]
+\end{frame}
+
+\begin{frame}{Proposition 1}
+    \justifying  % Requires \usepackage{ragged2e} in your preamble, if desired
+    
+    \textbf{Proposition 1.} Write
+    \[
+      \eta_{1}\bigl(p_{1} \mid n_{2}\bigr) 
+      \;=\; 
+      \frac{p_{1}\,\phi_{1}'(\alpha_{1}n_{2} - p_{1})}{\phi_{1}(\alpha_{1}n_{2} - p_{1})},
+      \quad
+      \eta_{2}\bigl(p_{2} \mid n_{1}\bigr) 
+      \;=\;
+      \frac{p_{2}\,\phi_{2}'(\alpha_{2}n_{1} - p_{2})}{\phi_{2}(\alpha_{2}n_{1} - p_{2})}.
+    \]
+    
+    for a group’s price elasticity of demand given the other group’s participation level.  
+    Then the profit‐maximizing pair of prices satisfy
+    
+    \[
+      \frac{p_{1} \;-\; \bigl(f_{1} - \alpha_{2}n_{2}\bigr)}{p_{1}}
+      \;=\;
+      \frac{1}{\eta_{1}(p_{1} \mid n_{2})},
+      \quad
+      \frac{p_{2} \;-\; \bigl(f_{2} - \alpha_{1}n_{1}\bigr)}{p_{2}}
+      \;=\;
+      \frac{1}{\eta_{2}(p_{2} \mid n_{1})}.
+    \]
+    
+    \end{frame}
+
+\begin{frame}{Armstrong (2006): Main Conclusions of Monopoly Pricing}
+    \justifying  % Requires \usepackage{ragged2e} in the preamble
+    
+    A monopolist platform, serving two distinct groups that benefit from interacting 
+    with one another, does not simply set each group’s price to cover the marginal 
+    cost of serving that group. Instead, it balances the prices charged to each side 
+    to account for cross‐group externalities and differences in demand elasticities.
+    This leads to the following key insights:
+    
+    \begin{itemize}
+        \item \textbf{Cross‐Group Externalities:} Prices on one side depend on how 
+        that side’s participation affects the other side’s willingness to join.
+    
+        \item \textbf{Balancing Demand:} If one side’s presence is highly valuable 
+        to the other side, the platform may lower or subsidize that side’s fee 
+        to maximize overall profit.
+    
+        \item \textbf{Interdependence of Pricing:} Optimal monopoly prices for each 
+        group differ from the standard one‐sided monopoly outcome, reflecting 
+        the platform’s internalization of cross‐group effects.
+    \end{itemize}
+    
+\end{frame}
+    
 \begin{frame}{Armstrong(2006): Competition for the Market}
     \begin{block}{Important Block}
         Key information goes here
